--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
-    "print(np.zeros([n_ro,n_cols]))\n",
+    "print(np.zeros([n_rows,n_cols]))\n",
     "\n",
     "for line in f:\n",
     "    \n",
