--- a/index.ipynb
+++ b/index.ipynb
@@ -312,10 +312,10 @@
     "\n",
     "f = open('bp.txt')\n",
     "\n",
-    "matnp.zeros([n_rows,n_cols]))\n",
+    "matrix = np.zeros([n_rows,n_cols])\n",
     "\n",
-    "for line in f:\n",
-    "    \n",
+    "\n",
+    "    for n, line in enumerate(f):\n",
     "\n",
     "# Your code here\n",
     "# Pseudocode outline below\n",
