Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,6 +316,7 @@
     "    \n",
     "for n, line in enumerate(f):\n",
     "    if n > 0:\n",
+    "        matrix[n,:] = line.split('\\t')\n",
     "        \n",
     "        \n",
     "        \n",
