Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
     "for n, line in enumerate(f):\n",
     "    if n > 0:\n",
     "        matrix[n,:] = line.split('\\t')\n",
-    "        \n",
+    "\n",
+    "print(matrix\n",
     "        \n",
     "        \n",
     "        \n",
