--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,25 +267,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file has 21 lines.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-89bb3bafb2af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'bp.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmatrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn_rows\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_cols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+      "The file has 21 lines.\n",
+      "[[  0.     0.     0.     0.     0.     0.     0.     0.  ]\n",
+      " [  1.   105.    47.    85.4    1.75   5.1   63.    33.  ]\n",
+      " [  2.   115.    49.    94.2    2.1    3.8   70.    14.  ]\n",
+      " [  3.   116.    49.    95.3    1.98   8.2   72.    10.  ]\n",
+      " [  4.   117.    50.    94.7    2.01   5.8   73.    99.  ]\n",
+      " [  5.   112.    51.    89.4    1.89   7.    72.    95.  ]\n",
+      " [  6.   121.    48.    99.5    2.25   9.3   71.    10.  ]\n",
+      " [  7.   121.    49.    99.8    2.25   2.5   69.    42.  ]\n",
+      " [  8.   110.    47.    90.9    1.9    6.2   66.     8.  ]\n",
+      " [  9.   110.    49.    89.2    1.83   7.1   69.    62.  ]\n",
+      " [ 10.   114.    48.    92.7    2.07   5.6   64.    35.  ]\n",
+      " [ 11.   114.    47.    94.4    2.07   5.3   74.    90.  ]\n",
+      " [ 12.   115.    49.    94.1    1.98   5.6   71.    21.  ]\n",
+      " [ 13.   114.    50.    91.6    2.05  10.2   68.    47.  ]\n",
+      " [ 14.   106.    45.    87.1    1.92   5.6   67.    80.  ]\n",
+      " [ 15.   125.    52.   101.3    2.19  10.    76.    98.  ]\n",
+      " [ 16.   114.    46.    94.5    1.98   7.4   69.    95.  ]\n",
+      " [ 17.   106.    46.    87.     1.87   3.6   62.    18.  ]\n",
+      " [ 18.   113.    46.    94.5    1.9    4.3   70.    12.  ]\n",
+      " [ 19.   110.    48.    90.5    1.88   9.    71.    99.  ]\n",
+      " [ 20.   122.    56.    95.7    2.09   7.    75.    99.  ]]\n"
      ]
     }
    ],
@@ -334,6 +344,27 @@
    "source": [
     "In this lab, we practiced creating NumPy arrays from both lists and ranges. We then practiced performing math operations like converting imperial measurements to metric measurements on each element of a NumPy array to create new arrays with new values. Finally, we used both of our new NumPy arrays to operate on each other and create new arrays containing the BMIs from our arrays containing heights and weights."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
