--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,6 +331,13 @@
     "    #Hint: skip the first row (it's just column names, not the data.)\n",
     "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
