Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,10 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='bp.txt' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f)"
+   ]
   },
   {
    "cell_type": "markdown",
